newtype-tools/tests/newtype-fail/union.stderr
error: expected `struct Newtype(inner_type)`
 --> tests/newtype-fail/union.rs:2:1
  |
2 | union U {
  | ^^^^^
